--- a/src/components/pages/Sell.css
+++ b/src/components/pages/Sell.css
@@ -26,7 +26,7 @@
   .sell-button {
     width: 150px;
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #d94afd;
     color: white;
     border: none;
     border-radius: 5px;
@@ -34,6 +34,6 @@
   }
   
   .sell-button:hover {
-    background-color: #45a049;
+    background-color: #ad58c2;
   }
   
