--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -105,6 +105,7 @@
     color: #252e48;
     font-size: 30px;
     line-height: 32px;
+    font-weight: normal;
   }
   
   @media only screen and (min-width: 1200px) {
