--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,8 +7,7 @@
 }
 
 .hero-container{
-    
-    height: 100vh;
+    height: 70vh; /* Adjust the height as needed */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -18,10 +17,11 @@
     object-fit: contain;
     background-color: #bfc2a8;
 }
+
 .hero-container > h1{
     color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
+    font-size: 70px; /* Adjust the font size as needed */
+    margin-top: -50px; /* Adjust the margin-top as needed */
 }
 .hero-container > p{
     margin-top: 8px;
