--- a/src/components/Product/ProductDetails.css
+++ b/src/components/Product/ProductDetails.css
@@ -1,22 +1,45 @@
 .product-details-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.info-container-title{
+  font-style: bold;
+}
+.product-image {
+  width: 30%;
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.location-container {
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
-  .product-image {
-    width: 30%; /* Adjust the width as needed */
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px; /* Make the image a rectangle with round borders */
-  }
-  .location-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+}
+.product-details-container p {
+  margin-bottom: 10px; /* Adjust the value as needed */
+}
+.info-container {
+  font-size: 12px; /* Adjust the font size as needed */
+  padding: 10px; /* Add padding to create space between text and border */
+  width: 60%; /* Adjust the width as needed */
+  line-height: 1.5; /* Set line height to create double spacing */
+
+}
+.social-media-container {
+  font-size: 12px; /* Adjust the font size as needed */
+
+}
+.date-container{
+  font-size: 12px; /* Adjust the font size as needed */
+
+}
+
   /* Add any additional styling as needed */
   
   
